[tool.poetry]
name = "piptube"
version = "1.2.0"
description = "Picture-in-picture wrapper for mpv and YouTube"
authors = ["James Thomas <codeactor@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
